# snake-cpp

./: CMakeLists.txt  README.md  main.cpp
dependencies/glad/: glad.h
src/: glad.c  main.cpp
